@@ -26,13 +26,11 @@ autoload :XMLSourceExporter, 'exporter/xml_source_exporter'
 autoload :PROIELXMLExporter, 'exporter/proiel_xml_exporter'
 autoload :TigerXMLExporter, 'exporter/tiger_xml_exporter'
 autoload :Tiger2Exporter, 'exporter/tiger2_exporter'
-autoload :JSONExporter, 'exporter/json_exporter'
 
 autoload :SourceImporter, 'importer/source_importer'
 autoload :XMLSourceImporter, 'importer/xml_source_importer'
 autoload :PROIELXMLImporter, 'importer/proiel_xml_importer'
 autoload :TextImporter, 'importer/text_importer'
-autoload :JSONImporter, 'importer/json_importer'
 
 module Proiel
   # The application version
