@@ -26,18 +26,10 @@ namespace :proiel do
     desc "Import a PROIEL source text. Options: FILE=data_file ID_MAP_FILE=id_map_file"
     task(:import => :environment) do
       raise "Filename required" unless ENV['FILE']
-
-      case ENV['FORMAT']
-      when NilClass, 'proiel'
-        PROIELXMLImporter.new.read(ENV['FILE'], id_map_file: ENV['ID_MAP_FILE'])
-      when 'json'
-        JSONImporter.new.read(ENV['FILE'])
-      else
-        raise "Invalid format"
-      end
+      PROIELXMLImporter.new.read(ENV['FILE'], id_map_file: ENV['ID_MAP_FILE'])
     end
 
-    desc "Export a PROIEL source text. Optional options: ID=database_ID_of_source (FORMAT={proiel|tigerxml|tiger2|json} MODE={all|reviewed} EXPORT_DIRECTORY=destination_directory SEMANTIC_TAGS={false|true} SOURCE_DIVISION=source_division_title_regexp REMOVE_CYCLES={none|heads|all})"
+    desc "Export a PROIEL source text. Optional options: ID=database_ID_of_source (FORMAT={proiel|tigerxml|tiger2} MODE={all|reviewed} EXPORT_DIRECTORY=destination_directory SEMANTIC_TAGS={false|true} SOURCE_DIVISION=source_division_title_regexp REMOVE_CYCLES={none|heads|all})"
     task(:export => :environment) do
       options = {}
 
